# cross-language-read-model

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  convert.py  digit.cpp  readme.md  train_trans.py
model/: digit.jit  digit.pth
src/: main.rs
